ADD: Basic data ingestion pipeline with reading data and train test splitting of data.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,10 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
+# For my referrence
+commands.txt
+artifacts/
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
