--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,3 +1,4 @@
 option_settings:
-    "aws:elasticbeanstalk:container:python":
-    WSGIPath: application:application
+  - namespace: "aws:elasticbeanstalk:container:python"
+    option_name: WSGIPath
+    value: application:application
